# rappi-ml-challenge

./: .coverage  README.md  main.py  pyproject.toml
.circleci/: config.yml
.github/workflows/: workflows.yml
app/: main.py
app/data/: reader.py
app/model/: train.py
app/model/trained_models/: 20240118_181849_061d975ce6434995b995cc32180f8b7e.joblib
app/tests/data/: test_pre_processer.py  test_reader.py
app/tests/model/: test_train.py
app_rappi_dfmejial/data/: reader.py
app_rappi_dfmejial/model/: train.py
app_rappi_dfmejial/notebooks/: Model_Analysis.ipynb
data/: reader.py
model/: train.py
tests/data/: test_pre_processer.py  test_reader.py
tests/model/: test_train.py
